now it can show the data of all date

--- a/mainTemplate.html
+++ b/mainTemplate.html
@@ -98,7 +98,7 @@ app.config = {
       distance: app.config.distance
     };
     myChart.setOption({
-      series: [{'label': labelOption}, {'label': labelOption}, {'label': labelOption}, {'label': labelOption}, {'label': labelOption}]
+      series: LABELS
     });
   }
 };
@@ -123,7 +123,7 @@ option = {
     }
   },
   legend: {
-    data: ['openwrt', 'alpine', 'onething', 'onething-mechanical', 'home-assistant']
+    data: NAMES
   },
   toolbox: {
     show: true,
@@ -142,7 +142,7 @@ option = {
     {
       type: 'category',
       axisTick: { show: false },
-      data: ['2022-03-18', '2022-03-17', '2022-03-16', '2022-03-15', '2022-03-14', '2022-03-13', '2022-03-12', '2022-03-11', '2022-03-10', '2022-03-09', '2022-03-08', '2022-03-07', '2022-03-06', '2022-03-05', '2022-03-04', '2022-03-03', '2022-03-02', '2022-03-01', '2022-02-28', '2022-02-27', '2022-02-26', '2022-02-25', '2022-02-24', '2022-02-23', '2022-02-22', '2022-02-21', '2022-02-20', '2022-02-19', '2022-02-18', '2022-02-17', '2022-02-16', '2022-02-15', '2022-02-14', '2022-02-13', '2022-02-12', '2022-02-11', '2022-02-10', '2022-02-09', '2022-02-08', '2022-02-07', '2022-02-06', '2022-02-05', '2022-02-04', '2022-02-03', '2022-02-02', '2022-02-01', '2022-01-31', '2022-01-30', '2022-01-29', '2022-01-28', '2022-01-27', '2022-01-26', '2022-01-25', '2022-01-24', '2022-01-23', '2022-01-22', '2022-01-21']
+      data: DATES
     }
   ],
   xAxis: [
@@ -180,7 +180,7 @@ option = {
                end: 100,//默认为100
            },
        ],
-  series: [{'name': 'openwrt', 'type': 'bar', 'barGap': 0, 'label': labelOption, 'emphasis': {'focus': 'series'}, 'data': [1301.1, 1008.59, 964.42, 920.86, 999.49, 1055.9, 1046.32, 796.83, 891.35, 924.02, 996.96, 1039.29, 1258.09, 1104.93, 1678.35, 945.42, 995.07, 994.25, 1171.26, 1226.55, 1077.94, 1060.03, 1102.79, 787.97, 798.34, 1038.39, 1219.64, 1151.3, 1120.51, 1072.29, 1074.1, 1016.06, 1083.31, 924.22, 891.21, 978.73, 582.61, 597.87, 519.65, 592.92, 491.76, 372.28, 376.35, 564.52, 766.14, 840.71, 911.96, 903.32, 598.23, 795.51, 788.67, -1283.79, 779.8, 834.94, 831.06, 82.85, 0.0]}, {'name': 'alpine', 'type': 'bar', 'barGap': 0, 'label': labelOption, 'emphasis': {'focus': 'series'}, 'data': [0.49, 0.35, 0.38, 1.0, 0.55, 1.05, 0.81, 1.05, 0.42, 1.03, 1.07, 1.08, 0.41, 0.42, 1.28, 0.9, 1.29, 0.65, 1.09, 0.42, 0.43, 1.04, 1.15, 0.56, 0.53, 2.28, 3.61, 3.03, 2.96, 2.58, 2.42, 2.42, 1.21, 0.34, 0.27, 0.24, 1.2, 2.1, 1.55, 1.61, 0.43, 0.24, 0.76, 2.23, 1.95, 1.69, 1.05, 1.43, 0.82, 1.07, 0.81, 1.05, 0.96, 1.33, 1.26, 0.07, 0.0]}, {'name': 'onething', 'type': 'bar', 'barGap': 0, 'label': labelOption, 'emphasis': {'focus': 'series'}, 'data': [345.67, 288.9, 301.52, 297.78, 306.3, 324.75, 282.41, 166.91, 220.98, 234.14, 207.51, 224.03, 266.09, 277.93, 231.33, 211.65, 183.64, 225.53, 257.41, 322.66, 313.82, 288.18, 203.67, 162.11, 195.88, 331.33, 392.45, 392.72, 300.99, 269.66, 258.33, 269.95, 260.85, 261.62, 221.98, 216.25, 114.94, 141.69, 103.15, 50.15, 87.7, 53.59, 51.31, 73.85, 132.26, 166.05, 121.5, 139.98, 68.63, 101.17, 217.39, 189.97, 226.08, 238.05, 231.82, 32.18, 0.0]}, {'name': 'onething-mechanical', 'type': 'bar', 'barGap': 0, 'label': labelOption, 'emphasis': {'focus': 'series'}, 'data': [379.18, 310.0, 299.31, 281.01, 298.34, 287.02, 452.61, 350.61, 335.56, 319.43, 323.72, 314.59, 308.63, 317.32, 247.84, 324.87, 316.72, 322.61, 379.88, 377.06, 389.9, 352.3, 365.31, 360.56, 276.55, 324.56, 351.5, 356.16, 330.48, 360.26, 371.45, 360.14, 450.58, 358.97, 306.19, 311.52, 186.73, 168.18, 163.48, 227.81, 135.39, 89.89, 94.44, 198.63, 304.4, 329.11, 308.63, 371.69, 192.6, 331.8, 256.35, 260.88, 239.17, 268.63, 270.41, 31.5, 0.0]}, {'name': 'home-assistant', 'type': 'bar', 'barGap': 0, 'label': labelOption, 'emphasis': {'focus': 'series'}, 'data': [0.26, 0.2, 0.2, 0.2, 0.2, 0.2, 0.21, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.21, 0.2, 0.2, 0.2, 0.21, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.21, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.19, 0.18, 0.19, 0.18, 0.16, 0.16, 0.16, 0.15, 0.15, 0.15, 0.16, 0.16, 0.18, 0.15, 0.16, 0.16, 0.17, 0.19, 0.17, 0.02, 0.0]}]
+  series: SERIES
 };
 
 if (option && typeof option === 'object') {
